[package]
edition = "2021"
name = "nss-docker-ng"
version = "1.0.4"
authors = ["Patrick Kuijvenhoven <patrick.kuijvenhoven@gmail.com>"]
description = "NSS plugin for finding Docker containers by their ID or name"
readme = "README.md"
license = "MIT"
repository = "https://github.com/petski/nss-docker-ng"

[lib]
name = "nss_docker_ng"
crate-type = [ "cdylib" ]

[dependencies]
libc = "0.2.153"
lazy_static = "1.4.0"
paste = "1.0"
libnss = "0.6.0"
debug_print = "1.0.0"
docker-api = "0.14.0"
tokio = { version = "1.36.0", features = ["rt", "macros"] }

[dev-dependencies]
mockito = "1.4.0"
mocktopus = "0.8.0"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true

[patch.crates-io]
libnss = { git = 'https://github.com/petski/libnss-rs', branch = 'debug-partialeq-for-tests' }
