[package]
edition = "2021"
name = "nss-docker-ng"
version = "1.1.2"
authors = ["Patrick Kuijvenhoven <patrick.kuijvenhoven@gmail.com>"]
description = "NSS plugin for finding Docker containers by their ID or name"
readme = "README.md"
license = "MIT"
repository = "https://github.com/petski/nss-docker-ng"

[lib]
name = "nss_docker_ng"
crate-type = [ "cdylib" ]

[dependencies]
libc = "0.2.153"
libnss = "0.9.0"
debug_print = "1.0.0"
docker-api = "0.14.0"
tokio = { version = "1.36.0", features = ["rt", "macros"] }

[dev-dependencies]
mockall = "0.14.0"
mockito = "1.4.0"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
